[tool.poetry]
name = "poetry-search-app"
version = "0.1.0"
description = ""
authors = ["Hundredvisionsguy <winikkc@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "poetry_search_app"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
